--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@google-cloud/promisify": "1.0.4",
     "@google-cloud/vision": "1.9.0",
     "ask-sdk": "^2.7.0",
+    "ask-sdk-core": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
